--- a/css/styles.css
+++ b/css/styles.css
@@ -159,18 +159,33 @@ img {
  /*SOBRE TECHPRO*/
 
  .sobre-tech {
-    background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
     background-position: right;
     background-repeat: repeat, no-repeat;
     background-size: 100%, 110rem;
  }
+ .notavif.notwebp .sobre-tech {
+    background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.jpg);
+ }
+ .webp .sobre-tech {
+    background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.webp);
+ }
+ .avif .sobre-tech {
+    background-image: linear-gradient(to bottom, transparent 50%, var(--primario) 0%), url(../img/imagen-mujer.avif);
+ }
  @media (min-width: 768px) {
     .sobre-tech {
-        background-image: linear-gradient(to left, transparent 20%, var(--primario) 60%), url(../img/imagen-mujer.jpg);
         background-repeat: repeat, no-repeat;
     }
+    .notavif.notwebp .sobre-tech {
+        background-image: linear-gradient(to left, transparent 20%, var(--primario) 60%), url(../img/imagen-mujer.jpg);
+    }
+    .webp .sobre-tech {
+        background-image: linear-gradient(to left, transparent 20%, var(--primario) 60%), url(../img/imagen-mujer.webp);
+    }
+    .avif .sobre-tech {
+        background-image: linear-gradient(to left, transparent 20%, var(--primario) 60%), url(../img/imagen-mujer.avif);
+    }
  }
-
 
  .sobre-tech-grid {
     display: grid;
@@ -291,22 +306,38 @@ img {
 
 /*NEWSLETTER*/
 .newsletter {
-    background-image: linear-gradient(to bottom, transparent 50%, var(--blanco) 0%), url(../img/newsletter.jpg);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 100%, 70rem;
 }
+.notavif.notwebp .newsletter {
+    background-image: linear-gradient(to bottom, transparent 50%, var(--blanco) 0%), url(../img/newsletter.jpg);
+}
+.webp .newsletter {
+    background-image: linear-gradient(to bottom, transparent 50%, var(--blanco) 0%), url(../img/newsletter.webp);
+}
+.avif .newsletter {
+    background-image: linear-gradient(to bottom, transparent 50%, var(--blanco) 0%), url(../img/newsletter.avif);
+}
 @media (min-width: 768px) {
     .newsletter {
-        background-image: linear-gradient(to right, transparent 50%, var(--blanco) 0%), url(../img/newsletter.jpg);
         background-position: center, -21rem 0;
         background-size: 100%, 100rem;
         padding: 10rem 0;
     }
+    .notavif.notwebp .newsletter {
+        background-image: linear-gradient(to right, transparent 50%, var(--blanco) 0%), url(../img/newsletter.jpg);
+    }
+    .webp .newsletter {
+        background-image: linear-gradient(to right, transparent 50%, var(--blanco) 0%), url(../img/newsletter.webp);
+    }
+    .avif .newsletter {
+        background-image: linear-gradient(to right, transparent 50%, var(--blanco) 0%), url(../img/newsletter.avif);
+    }
 }
 .contenido-newsletter {
     display: grid;
-    grid-template-rows: repeat(2, 30rem);
+    grid-template-rows: repeat(2, 40rem);
     gap: var(--separacion);
 }
 @media (min-width: 768px) {
@@ -324,6 +355,7 @@ img {
         grid-column: 2 / 3;
     }
 }
+
 .formulario input[type="text"] {
     width: 100%;
     padding: 1rem;
